# Key-Value-Vault

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile  main.cc  test_file.txt
src/cli/: cli.cc  cli.h
src/include/StrPlus/: str_plus.cc  str_plus.h
src/include/cmd_args/arguments/: argument.h
src/lib/bin_tree/: bin_tree.cc  bin_tree.h
src/lib/bin_tree/container/: binary_tree.cc  binary_tree.h  i_container_iterator.h  iterator.cc
src/lib/hash_table/: hash_table.cc  hash_table.h
src/lib/vault/: vault_interface.h
src/lib/vault/data_structure/: vault_data.h
src/lib/vault/engine/: vault_engine.cc  vault_engine.h
src/lib/vault/engine/channel/: channel.h
src/tests/: KeyValueVault_tests.cc  bin_tree_tests.cc
src/tests/datasets/: data_correct_1000.txt  data_correct_20.txt  data_correct_200.txt  data_incorrect_fault_on_13.txt
